# beyn

./: .gitignore  README.md  elems.py  listen.py  llm.py  main.py  presentation.py  pyproject.toml  utils.py
recipes/: turkey_meatballs_with_spaghetti.json
